--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       .main-container {
         background-color: #d7ffab;
         border-radius: 40px;
-        width: 70%;
+        width: 75%;
         margin: auto;
         min-width: 30%;
+        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.774);
       }
 
       .top-container {
@@ -117,14 +118,15 @@
         flex: 0 1 auto;
         max-width: 100%;
         margin: 20px;
-        padding: 20px;
+        padding: 5px;
         background-color: #e34a6f;
         border-radius: 500px;
+        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.726);
       }
 
       img {
         height: 500px;
-        width: 350px;
+        width: 300px;
         object-fit: contain;
       }
 
@@ -132,11 +134,9 @@
         flex: 0 1 auto;
         color: #e34a6f;
         max-width: 100%;
-        padding: 50px;
+        padding: 55px;
         text-align: center;
-        /*background-color: #f7b2bd;*/
         border-radius: 100px;
-        /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
         font-style: italic;
         font-weight: bold;
       }
@@ -181,15 +181,17 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
+        margin: 10px;
       }
 
-      
       .prev {
-        left: 10px;
+        left: 5px;
+        font-size: 50px;
       }
 
       .next {
-        right: 10px;
+        right: 5px;
+        font-size: 50px;
       }
       
       .slide-indicator {
@@ -233,7 +235,7 @@
       }
 
       .our-story:hover {
-        background-color: #5a423e;
+        background-color: #97314b;
         color: white;
       }
 
@@ -242,7 +244,7 @@
       }
 
       .download:hover {
-        background-color: #265039;
+        background-color: #2f5230;
         color: white;
       }
 
@@ -252,7 +254,7 @@
       }
 
       .donate:hover {
-        background-color: #923f32;
+        background-color: #9c7279;
         color: white;
       }
 
